[package]
name = "chip8"
version = "0.1.0"
authors = ["Anuj Gautam <agautam1@vols.utk.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.0"
crossterm = "0.17"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
byteorder = "1.3.4"
rand = "0.7.3"
